# slurm-ci

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  STATUS_SYNC_FIX.md  pyproject.toml
.cursor/rules/: backup-db.mdc
.github/workflows/: ci.yml
docs/: git-watch.md
examples/: git-watch-config.toml
examples/01_local_run/: run_local_run.sh
examples/02_slurm_run/: run_slurm_run.sh
examples/03_git_watch/: git-watch-config.toml
src/slurm_ci/: __init__.py  cli.py  config.py  daemon_manager.py  dashboard.py  database.py  git_orchestrator.py  git_watch_config.py  git_watcher.py  github_api.py  job_executor.py  local_orchestrator.py  ref_matcher.py  service_manager.py  slurm_launcher.py  slurm_run_config.py  slurm_utils.py  status_file.py  status_watcher.py  unified_orchestrator.py  webhook_server.py  workflow_parser.py
src/slurm_ci/job_runners/: local_docker_runner.py  utils.py  (+1 more)
tests/: conftest.py  test_cli.py  test_config_module.py  test_daemon_manager.py  test_dashboard.py  test_database.py  test_examples.py  test_git_watcher.py  test_service_manager.py  test_slurm_run_config.py  test_slurm_utils.py  test_status_file.py  test_status_sync_fix.py  test_status_watcher.py
tests/git_watch/: test_cli_integration.py  test_config.py  test_ref_matcher.py
tests/parser/: ci.yml  ci_with_include.yml  test_workflow_parser.py
tests/project_w_docker/: Dockerfile  Dockerfile.artifact_shim  ci.yml  test_script.sh
tests/sample_project/: test_read_status.py
tests/slurm_launcher/: .gitignore  test_launch.py  test_launcher_mocked.py  test_relaunch.py
(+8 files in other folders)
