[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-ci"

dynamic = ["version"]

authors = [
    { name = "James E. T. Smith", email = "james.smith9113@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "requests",
    "sqlalchemy",
    "pyyaml",
    "docker",
    "toml",
    "psutil",
    "jinja2",
    "pytest",
    "ruff",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/jamesETsmith/slurm-ci"
"Bug Tracker" = "https://github.com/jamesETsmith/slurm-ci/issues"


[project.scripts]
slurm-ci = "slurm_ci.cli:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# A good starting set of rules:
# E = pycodestyle errors
# F = pyflakes
# W = pycodestyle warnings
# I = isort
# ANN = flake8-annotations (for type checking)
select = ["E", "F", "W", "I", "ANN"]

[tool.ruff.lint.isort]
# Sorts imports automatically
lines-after-imports = 2

[tool.setuptools_scm]
# This enables setuptools-scm to generate versions from git tags
